# imre_robotics_ws

./: README.md
src/imre_description/: CMakeLists.txt  package.xml
src/imre_description/config/: my_controllers.yaml
src/imre_description/launch/: display.launch.py  rsp.launch.py
src/imre_description/urdf/: imre_robot.urdf.xacro  imre_robot_yedek_saglam.urdf.xacro
src/imre_description/worlds/: imre_world.world
src/imre_web_controller/: package.xml  setup.cfg  setup.py
src/imre_web_controller/imre_web_controller/: imre_kontrol_merkezi.py  index.html  kamera_cevirici.py  otonom_surus.py
